--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -5,4 +5,6 @@
     <dimen name="main_menu_options">20sp</dimen>
     <dimen name="padding_small">8dp</dimen>
     <dimen name="padding_large">32dp</dimen>
+
+    <dimen name="bookImage">150dp</dimen>
 </resources>
