--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     <style name="mainOptionVoices">
         <item name="android:textSize">@dimen/main_menu_options</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_gravity">start</item>
         <item name="android:paddingLeft">@dimen/padding_medium</item>
     </style>
 
