rETROFIT WORKS - END DAY 4

--- a/app/src/main/res/layout/activity_add_new_book.xml
+++ b/app/src/main/res/layout/activity_add_new_book.xml
@@ -50,6 +50,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/bookImage"
                         android:layout_width="@dimen/bookImage"
                         android:layout_height="@dimen/bookImage"
                         android:contentDescription="bookCover" />
