Element for Reading Track Created. next Step: AddReadingTrackActivity

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -7,4 +7,5 @@
     <dimen name="padding_large">32dp</dimen>
 
     <dimen name="bookImage">150dp</dimen>
+    <dimen name="readin_track_info">20sp</dimen>
 </resources>
