To check error on LiveData

--- a/app/src/main/res/layout/activity_add_reading_track.xml
+++ b/app/src/main/res/layout/activity_add_reading_track.xml
@@ -23,25 +23,25 @@
             android:id="@+id/BookTitleReadingtrack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="@string/title_readingTrack" />
+            android:hint="@string/title_readingTrack" />
 
         <EditText
             android:id="@+id/LocationReadingtrack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/location_readingTrack" />
+            android:hint="@string/location_readingTrack" />
 
         <EditText
             android:id="@+id/DateReadingTrack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="@string/date_readingTrack" />
+            android:hint="@string/date_readingTrack" />
 
         <EditText
             android:id="@+id/PagesReadingTrack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="@string/Page_readingTrack" />
+            android:hint="@string/Page_readingTrack" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -51,7 +51,7 @@
             android:padding="@dimen/padding_medium">
 
             <Button
-                android:id="@+id/saveBookButton"
+                android:id="@+id/saveReadingTrackButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/save_readingTrack" />
