Room Working and Date type -> Ensure the user input a Date dd/mm/yyyy

--- a/app/src/main/res/layout/activity_add_reading_track.xml
+++ b/app/src/main/res/layout/activity_add_reading_track.xml
@@ -33,12 +33,14 @@
 
         <EditText
             android:id="@+id/DateReadingTrack"
+            android:inputType="date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/date_readingTrack" />
 
         <EditText
             android:id="@+id/PagesReadingTrack"
+            android:inputType="number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/Page_readingTrack" />
