Add ReadingTrack Activity Completed - END DAY 10

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -8,4 +8,5 @@
 
     <dimen name="bookImage">150dp</dimen>
     <dimen name="readin_track_info">20sp</dimen>
+    <dimen name="read_pages">18sp</dimen>
 </resources>
