--- a/app/src/main/res/layout/activity_add_reading_track.xml
+++ b/app/src/main/res/layout/activity_add_reading_track.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,11 +18,10 @@
             android:textSize="@dimen/readin_track_info"
             android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/BookTitleReadingtrack"
+        <Spinner
+            android:id="@+id/bookTitle_spinner"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/title_readingTrack" />
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -51,12 +49,23 @@
             android:layout_height="wrap_content"
             android:hint="@string/date_readingTrack" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Page_readingTrack"
+            android:textSize="@dimen/read_pages"/>
         <EditText
             android:id="@+id/PagesReadingTrack"
             android:inputType="number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/Page_readingTrack" />
+            android:textAlignment="center"
+            android:hint="@string/Page_readingTrackhint"/>
+    </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
