READING TRACKS WORK END Day 11

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,4 +6,9 @@
         android:title="@string/my_library"
         />
 
+    <item
+        android:id="@+id/my_reading_tracks"
+        android:title="@string/my_reading_tracks"
+        />
+
 </menu>
