--- a/app/src/main/res/layout/reading_track_item.xml
+++ b/app/src/main/res/layout/reading_track_item.xml
@@ -6,7 +6,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="2"
         android:paddingLeft="@dimen/padding_medium"
         android:orientation="vertical">
 
@@ -87,5 +93,15 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
+    </LinearLayout>
+
+        <Button
+            android:id="@+id/editTrackButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:layout_marginRight="@dimen/padding_medium"
+            android:text="@string/edit" />
     </LinearLayout>
 </ScrollView>
