Quote Feature is working - To be added: Field Control, listener, dialog alerts

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -11,4 +11,9 @@
         android:title="@string/my_reading_tracks"
         />
 
+    <item
+        android:id="@+id/my_quotes"
+        android:title="@string/myQuotes"
+        />
+
 </menu>
