--- a/app/src/main/res/layout/my_library_details_activity.xml
+++ b/app/src/main/res/layout/my_library_details_activity.xml
@@ -86,5 +86,21 @@
             android:padding="1dp"
             tools:listitem="@layout/reading_track_item" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/padding_medium"
+            android:paddingTop="@dimen/padding_medium"
+            android:textSize="@dimen/readin_track_info"
+            android:text="@string/myQuotes"
+            android:paddingBottom="@dimen/padding_small"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/quotes_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="1dp"
+            tools:listitem="@layout/reading_track_item" />
+
     </LinearLayout>
 </ScrollView>
