--- a/app/src/main/res/layout/activity_add_new_quote.xml
+++ b/app/src/main/res/layout/activity_add_new_quote.xml
@@ -21,6 +21,12 @@
         android:textSize="@dimen/readin_track_info"
         android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/fixedTitleforUpdate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
+
     <Spinner
         android:id="@+id/bookTitle_quotespinner"
         android:layout_width="wrap_content"
