--- a/app/src/main/res/layout/my_library_details_activity.xml
+++ b/app/src/main/res/layout/my_library_details_activity.xml
@@ -102,5 +102,22 @@
             android:padding="1dp"
             tools:listitem="@layout/reading_track_item" />
 
+        <LinearLayout
+            android:padding="@dimen/padding_medium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/deleteBookButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/padding_medium"
+                android:paddingRight="@dimen/padding_medium"
+                android:background="@android:color/holo_red_light"
+                android:text="@string/deleteButton"
+                android:textColor="@android:color/white"/>
+        </LinearLayout>
+
     </LinearLayout>
 </ScrollView>
