--- a/app/src/main/res/layout/widget_view.xml
+++ b/app/src/main/res/layout/widget_view.xml
@@ -6,16 +6,19 @@
     >
 
     <TextView
-        android:id="@+id/TitleWidgetView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/widget_title"
         android:textStyle="bold"
         android:paddingBottom="@dimen/padding_small"/>
 
-    <Button
-        android:id="@+id/SaveWidgetButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/widget_save_button"/>
+    <TextView
+        android:id="@+id/widget_body_TV"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:textColor="@android:color/black"
+        android:background="@android:color/white"
+        android:text="@string/noQuoteWidget"
+        />
 </LinearLayout>
