Start Adding Sign-Up

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,6 +93,13 @@
                     />
             </LinearLayout>
 
+            <FrameLayout
+                android:id="@+id/sign_button_fragment_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="centerInside" />
+
+
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
