--- a/app/src/main/res/layout/reading_track_item.xml
+++ b/app/src/main/res/layout/reading_track_item.xml
@@ -96,6 +96,7 @@
     </LinearLayout>
 
         <Button
+            android:focusable="true"
             android:id="@+id/editTrackButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
