--- a/app/src/main/res/layout/activity_add_new_book.xml
+++ b/app/src/main/res/layout/activity_add_new_book.xml
@@ -23,11 +23,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:hint="@string/search_book_hinte"
+            android:focusable="auto"
+            android:nextFocusDown="@id/search_book_button"
             android:inputType="text" />
 
         <Button
             android:id="@+id/search_book_button"
             android:layout_width="wrap_content"
+            android:nextFocusDown="@id/saveBookButton"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/search_book"/>
