--- a/app/src/main/res/layout/my_library_details_activity.xml
+++ b/app/src/main/res/layout/my_library_details_activity.xml
@@ -110,6 +110,7 @@
 
             <Button
                 android:id="@+id/deleteBookButton"
+                android:focusable="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/padding_medium"
