--- a/app/src/main/res/layout/quote_item.xml
+++ b/app/src/main/res/layout/quote_item.xml
@@ -40,6 +40,7 @@
 
         <Button
             android:id="@+id/editQuoteButton"
+            android:focusable="true"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
