--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:padding="@dimen/padding_medium">
+    android:padding="@dimen/padding_medium"
+    android:background="@color/colorBackground">
 
         <ImageView
             android:id="@+id/bookImageLibrary"
