--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#197AFF</color>
+    <color name="colorPrimaryDark">#2460B2</color>
+    <color name="colorAccent">#B22C00</color>
+    <color name="colorBackground">#FFD1B3</color>
 </resources>
